--- a/CSS/HeroStyle.css
+++ b/CSS/HeroStyle.css
@@ -19,7 +19,7 @@
     font-style: normal;
 }
 
-body {
+.fondo {
     background-image: url(../posters/Background_image-1.png);
     background-size: cover;
     background-repeat: no-repeat;
@@ -76,6 +76,7 @@ header {
     justify-content: space-between;
     align-items: center;
     padding: 1rem;
+    color: rgb(255, 255, 255);
 }
 
 .header_title {
@@ -115,4 +116,58 @@ nav {
     border: 5px solid rgb(25, 0, 255);
     border-radius: 30px;
     box-shadow: 7px 7px 10px rgba(25, 0, 255, 0.5);
+}
+
+/*CSS para la character page (recordar poner la informacion de los personajes en los json)*/
+
+body {
+    background-color: rgb(0, 0, 0);
+}
+
+.filtro {
+    width: 50px;
+    height: 50px;
+}
+
+.search_section {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+input {
+    background-color: aliceblue;
+    font-family: "Work Sans";
+    font-size: 24px;
+    border-radius: 30px;
+    width: 1500px;
+    height: 45px;
+    margin-bottom: 20px;
+}
+
+#characters_section {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 2rem;
+  padding: 2rem;
+  background-color: #111;
+  color: white;
+}
+
+.character_card {
+  background-color: #1e1e1e;
+  border-radius: 10px;
+  overflow: hidden;
+  box-shadow: 0 0 10px rgba(255, 0, 0, 0.2);
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.character_card img {
+  width: 100%;
+  height: auto;
+  display: block;
+}
+
+.character_card:hover .character-name {
+  bottom: 0;
 }
