--- a/CSS/HeroStyle.css
+++ b/CSS/HeroStyle.css
@@ -19,6 +19,13 @@
     font-style: normal;
 }
 
+@font-face {
+  font-family: "Compacta";
+  src: url("../fonts/Compacta\ Bold\ Italic.otf") format("opentype");
+  font-weight: bold;
+  font-style: italic;
+}
+
 .fondo {
     background-image: url(../posters/Background_image-1.png);
     background-size: cover;
@@ -82,8 +89,8 @@ header {
 
 
 .header_title {
-    font-family: "Monserrat";
-    font-size: 2.5rem;
+    font-family: "Compacta";
+    font-size: 4rem;
 }
 
 nav {
@@ -238,4 +245,25 @@ hr {
   border-radius: 20px;
   border: rgb(221, 0, 255) ;
   box-shadow: 1px 3px 0.1px rgb(144, 0, 132);
+}
+
+/*CSS para la history page */
+
+.main_image {
+  width: 40%;
+}
+
+#information_JW {
+  display: flex;
+  flex-direction: row;
+  margin-top: 20px;
+  align-items: center;
+  justify-content: center;
+}
+
+#Span_Historyname {
+  color: aliceblue;
+  font-size: 8rem;
+  display: flex;
+  font-family: "Monserrat";
 }
