--- a/CSS/HeroStyle.css
+++ b/CSS/HeroStyle.css
@@ -267,3 +267,29 @@ hr {
   display: flex;
   font-family: "Monserrat";
 }
+
+/*CSS para la Movie informaction page*/
+
+.section_info {
+  width: 80%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  color: rgb(255, 255, 255);
+}
+
+.button_back {
+  width: 60px;
+}
+
+.movie_image {
+  border-radius: 20px;
+}
+
+.Info_movie {
+  font-family: "Work Sans";
+  display: flex;
+  flex-direction: column;
+  margin-left: 40px;
+}
+
