--- a/CSS/HeroStyle.css
+++ b/CSS/HeroStyle.css
@@ -293,3 +293,60 @@ hr {
   margin-left: 40px;
 }
 
+/* CSS para la weapon info page */
+
+.stats {
+  display: flex;
+  flex-direction: column;
+  gap: 50px;
+}
+
+.general_weapon {
+  background-color: #000000;
+  box-shadow: 0 0 20px rgb(255, 0, 0);
+}
+
+.section_weaponCard {
+  color: white;
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
+  margin-right: 1000px;
+  justify-content: center;
+  align-items: center;
+  font-family: "Work Sans";
+  padding: 2rem;
+  border-radius: 12px;
+}
+
+.weaponInfo_section_image {
+  border-radius: 8px;
+  margin-bottom: 1rem;
+}
+
+.stats .stat {
+  margin-bottom: 1rem;
+}
+
+.stat span {
+  display: block;
+  margin-bottom: 0.3rem;
+  font-weight: bold;
+}
+
+.bar-container {
+  background: #333;
+  border-radius: 6px;
+  height: 12px;
+  width: 200%;
+  overflow: hidden;
+}
+
+.bar {
+  height: 100%;
+  background: #00bfff;
+  border-radius: 6px;
+}
+
