--- a/CSS/HeroStyle.css
+++ b/CSS/HeroStyle.css
@@ -259,13 +259,23 @@ hr {
   margin-top: 20px;
   align-items: center;
   justify-content: center;
+  padding: 3%;
+  box-shadow: 0px 0px 10px rgb(255, 0, 0);
+  border-radius: 10px;
 }
 
 #Span_Historyname {
   color: aliceblue;
-  font-size: 8rem;
+  font-size: 4rem;
   display: flex;
   font-family: "Monserrat";
+}
+
+#info {
+  display: flex;
+  color: white;
+  flex-direction: column;
+  font-family: "Work Sans";
 }
 
 /*CSS para la Movie information page*/
