feat: :sparkles: History Page Description
Description showed on the history page with its style

none

--- a/CSS/HeroStyle.css
+++ b/CSS/HeroStyle.css
@@ -278,6 +278,12 @@ hr {
   font-family: "Work Sans";
 }
 
+#DescripcionJW {
+  color: white;
+  font-family: "Work Sans";
+  padding: 5%;
+}
+
 /*CSS para la Movie information page*/
 
 .section_info {
