--- a/CSS/HeroStyle.css
+++ b/CSS/HeroStyle.css
@@ -127,6 +127,11 @@ nav {
     box-shadow: 0px 0px 10px rgba(25, 0, 255, 0.5);
 }
 
+ a {
+  color: rgb(255, 255, 255);
+  text-decoration: none;
+}
+
 /*CSS para la character page (recordar poner la informacion de los personajes en los json)*/
 
 body {
@@ -196,12 +201,12 @@ input {
   display: flex;
   flex-direction: row;
   width: 90%;
-  border: 4px solid rgb(255, 0, 255);
+  border: 4px solid rgb(139, 0, 0);
   color: rgb(255, 255, 255);
   align-items: center;
   gap: 20px;
   border-radius: 20px;
-  box-shadow: 0px 0px 30px rgb(255, 0, 255);
+  box-shadow: 0px 0px 30px rgb(255, 0, 0);
 }
 
 #weapons_total {
