feat: :zap: Characters improvement
characters section improved

none

--- a/CSS/HeroStyle.css
+++ b/CSS/HeroStyle.css
@@ -392,3 +392,11 @@ hr {
   display: flex;
   font-family: "Monserrat";
 }
+
+.Info_character {
+  font-family: "Work Sans";
+}
+
+strong, h3 {
+  font-family: "Compacta";
+}
