--- a/CSS/HeroStyle.css
+++ b/CSS/HeroStyle.css
@@ -205,7 +205,8 @@ input {
 /* CSS para la weapons page */
 
 .weapon_image {
-  width: 20%;
+  width: 200px;
+
 }
 
 .weapon_card {
@@ -323,6 +324,13 @@ hr {
   display: flex;
   flex-direction: column;
   margin-left: 40px;
+}
+
+.section_descriptionWeapon, .section_weaponInMovie {
+  color: white;
+  font-family: "Work Sans";
+  font-size: 1.5rem;
+  padding: 10px;
 }
 
 /* CSS para la weapon info page */
