feat: :zap: Final details
final details

none

--- a/CSS/HeroStyle.css
+++ b/CSS/HeroStyle.css
@@ -132,6 +132,15 @@ nav {
   text-decoration: none;
 }
 
+.desplegable {
+  display: none;
+  font-size: 2rem;
+  background: none;
+  border: none;
+  color: white;
+  cursor: pointer;
+}
+
 /*CSS para la character page (recordar poner la informacion de los personajes en los json)*/
 
 body {
@@ -405,39 +414,42 @@ hr {
 
 /* CSS para la weapon info page */
 
-.stats {
-  display: flex;
-  flex-direction: column;
-  gap: 50px;
-}
-
 .general_weapon {
   background-color: #000000;
   box-shadow: 0 0 20px rgb(255, 0, 0);
+  padding: 2rem 1rem;
 }
 
 .section_weaponCard {
   color: white;
   display: flex;
   flex-direction: row;
-  width: 100%;
-  max-width: 1200px;
-  margin: 0 auto;
-  margin-right: 1000px;
+  flex-wrap: wrap;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
+  gap: 2rem;
+  max-width: 1000px;
+  margin: 0 auto;
   font-family: "Work Sans";
   padding: 2rem;
   border-radius: 12px;
 }
 
 .weaponInfo_section_image {
+  width: 140%;
   border-radius: 8px;
-  margin-bottom: 1rem;
+}
+
+.stats {
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
+  width: 100%;
+  max-width: 500px;
 }
 
 .stats .stat {
-  margin-bottom: 1rem;
+  margin-bottom: 0.5rem;
 }
 
 .stat span {
@@ -450,7 +462,7 @@ hr {
   background: #333;
   border-radius: 6px;
   height: 12px;
-  width: 200%;
+  width: 100%;
   overflow: hidden;
 }
 
@@ -459,6 +471,7 @@ hr {
   background: #00bfff;
   border-radius: 6px;
 }
+
 
 /* CSS para la character information page */
 
@@ -488,4 +501,99 @@ hr {
 
 strong, h3 {
   font-family: "Compacta";
+}
+
+@media (max-width: 600px) {
+  /* Estilos CSS que se aplican solo si se cumple lo del cel */
+  nav {
+    display: flex;
+    gap: 1.5rem;
+    font-family: "Work Sans";
+    font-size: 1.2rem;
+    justify-content: center;
+    flex-wrap: wrap;
+    width: 100%;
+    text-align: center;
+  }
+
+  header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+  padding: 1rem;
+  color: white;
+  text-align: center;
+}
+  .information_JW {
+    display: flex;
+    flex-direction: column;
+  }
+
+  #information_JW {
+    flex-direction: column;
+    text-align: center;
+    padding: 20px;
+  }
+
+  .main_image {
+    width: 100%;
+    max-width: 100%;
+  }
+
+  #Span_Historyname {
+    font-size: 2.5rem;
+    justify-content: center;
+  }
+
+  #DescripcionJW {
+    padding: 20px;
+  }
+
+  .weapon_card {
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
+  
+}
+.search_section {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .input_SearchCharacter,
+  #movieFilter {
+    width: 90%;
+    max-width: 350px;
+    text-align: center;
+  }
+
+  .weaponInfo_section_image {
+    width: 20%;
+  }
+
+  .general_character {
+    flex-direction: column;
+    text-align: center;
+    padding: 30px 20px;
+  }
+
+  .Info_character {
+    max-width: 100%;
+  }
+
+  .sectionDiv_info_character img {
+    max-width: 80%;
+  }
+
+  #main_movies {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  justify-content: center;
+  align-items: center;
+  margin-top: 5%;
+  margin-bottom: 5%;
+  margin-left: 7%;
+}
 }
